--- a/assets/css/scss/admin-metabox.scss
+++ b/assets/css/scss/admin-metabox.scss
@@ -31,6 +31,7 @@
   // The left nav
   ul.ui-tabs-nav {
     line-height: 1em;
+    float: left;
 
     .rtl & {
 	  float: right;
